--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -190,7 +190,7 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-detalle-factura-proyectos [contrato]="contrato"></app-detalle-factura-proyectos>
+                <app-detalle-factura-proyectos [contrato]="contrato" [idSolicitud]="idSolicitud"></app-detalle-factura-proyectos>
             </mat-expansion-panel>
         </mat-accordion>
     </ng-container>
