--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
@@ -55,6 +55,7 @@
                                     [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
                                     [esVerDetalle]="esVerDetalle"
                                     [idSolicitud]="idSolicitud"
+                                    [ocultarAcordeonAmortizacionAnticipo]="getAmortizacionXproyecto(proyecto.value.contratacionProyectoId)"
                                     (estadoSemaforoProyecto)="proyecto.get( 'registroCompleto' ).setValue( $event );checkRegistroCompleto()">
                 </app-form-proyecto>
             </div>
