--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
@@ -44,6 +44,7 @@
                     <mat-accordion *ngFor="let fase of fases.controls; index as i">
                         <mat-expansion-panel
                         *ngIf="
+                            ocultarAcordeonAmortizacionAnticipo &&
                             mostrarAmortizacion &&
                             fase.get('codigo').value === fasesContrato.construccion &&
                             manejoAnticipoRequiere === true &&
