--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
@@ -52,7 +52,10 @@
                 <app-form-proyecto  [proyecto]="proyecto"
                                     [contrato]="contrato"
                                     [listaMenusId]="listaMenusId"
-                                    [registrarSolicitudPagoObs]="registrarSolicitudPagoObs">
+                                    [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
+                                    [idSolicitud]="idSolicitud"
+                                    [ocultarAcordeonAmortizacionAnticipo]="getAmortizacionXproyecto(proyecto.value.contratacionProyectoId)"
+                                    >
                 </app-form-proyecto>
             </div>
         </div>
