--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
@@ -54,6 +54,7 @@
                                     [listaMenusId]="listaMenusId"
                                     [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
                                     [idSolicitud]="idSolicitud"
+                                    [num]="i"
                                     [ocultarAcordeonAmortizacionAnticipo]="getAmortizacionXproyecto(proyecto.value.contratacionProyectoId)"
                                     >
                 </app-form-proyecto>
