--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -195,7 +195,7 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-detalle-factura-proyectos [contrato]="contrato" [idSolicitud]="idSolicitud"></app-detalle-factura-proyectos>
+                <app-detalle-factura-proyectos [contrato]="contrato" [idSolicitud]="idSolicitud" [num]="i"></app-detalle-factura-proyectos>
             </mat-expansion-panel>
         </mat-accordion>
     </ng-container>
