--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-proyecto/form-proyecto.component.html
@@ -55,6 +55,7 @@
                                                     [faseCodigo]="fase.get( 'codigo' ).value"
                                                     [criteriosPagoFacturaCodigo]="registrarSolicitudPagoObs !== undefined ? registrarSolicitudPagoObs.criteriosPagoFacturaCodigo : ''"
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                    [num]="num"
                                                     (emitAnticipo)="fase.get( 'tieneAnticipo' ).setValue( $event )">
                             </app-obs-criterio-pagos>
                         </mat-expansion-panel>
