--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -6,7 +6,11 @@
 
 <div class="d-flex justify-content-center" *ngIf="criteriosSeleccionadosArray.length > 0">
     <strong>Criterios de pago:</strong>
-    <p *ngFor="let criterio of criteriosSeleccionadosArray; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="criteriosSeleccionadosArray.length - 1 !== i">,</span><span *ngIf="criteriosSeleccionadosArray.length - 1 === i">.</span> </p>
+    <p *ngFor="let criterio of criteriosSeleccionadosArray; index as i" style="margin-left: .4em;">
+        <span *ngIf="criterio">
+          {{ criterio.nombre }}<span *ngIf="criteriosSeleccionadosArray.length - 1 !== i">,</span><span *ngIf="criteriosSeleccionadosArray.length - 1 === i">.</span>
+        </span>
+      </p>
   </div>
   <form [formGroup]="addressForm">
     <div formArrayName="criterios">
