--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
@@ -55,6 +55,7 @@
                                     [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
                                     [idSolicitud]="idSolicitud"
                                     [ocultarAcordeonAmortizacionAnticipo]="getAmortizacionXproyecto(proyecto.value.contratacionProyectoId)"
+                                    [num]="i"
                                     >
                 </app-form-proyecto>
             </div>
