--- a/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/tabla-registro-programacion/tabla-registro-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/tabla-registro-programacion/tabla-registro-programacion.component.html
@@ -82,7 +82,7 @@
                 class="btn-table"
                 (click)="openRegistroProgramacion( element , true )"
                 *ngIf="element?.cumpleCondicionesTai === true">
-                Ver detalle
+                Ver historial
         </button>
 
       </td>
