--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/liberacion-saldo/liberacion-saldo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/liberacion-saldo/liberacion-saldo.component.html
@@ -8,10 +8,10 @@
 <mat-accordion *ngFor="let drp of drps">
     <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title {{estadoInforme == '0' || estadoInforme == null || semaforo? 'sin-diligenciar': estadoInforme == '1' || registroCompleto == false? 'en-proceso': 'completo'}}">
+                <mat-panel-title class="expansion-style--title" [ngClass]="drp.estadoSemaforo">
                   {{ drp.numeroDrp }}
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-liberacion-saldo [tablaAportantes]="drp.aportantesGrid"></app-tabla-liberacion-saldo>
+            <app-tabla-liberacion-saldo [tablaAportantes]="drp.aportantesGrid" ></app-tabla-liberacion-saldo>
     </mat-expansion-panel>
 </mat-accordion>
