--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/liberacion-saldo/liberacion-saldo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/liberacion-saldo/liberacion-saldo.component.html
@@ -12,6 +12,6 @@
                   {{ drp.numeroDrp }}
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-liberacion-saldo [tablaAportantes]="drp.aportantesGrid" ></app-tabla-liberacion-saldo>
+            <app-tabla-liberacion-saldo [tablaAportantes]="drp.aportantesGrid" [balanceFinanciero]="drp.balanceFinanciero" ></app-tabla-liberacion-saldo>
     </mat-expansion-panel>
 </mat-accordion>
