--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-registrar-participantes/form-registrar-participantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-registrar-participantes/form-registrar-participantes.component.html
@@ -214,7 +214,7 @@
     <!--Control de cambios 22 / Responsable secretaría académica-->
     <mat-card class="shipping-card">
       <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text"> Responsable secretaría técnica </mat-card-title>
+        <mat-card-title class="header-card--text"> Responsable secretaría general </mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div formGroupName="responsables">
@@ -231,7 +231,7 @@
                       (responsable.get('nombre').invalid && estaEditando)
                     "
                   >
-                    Nombre Secretario
+                    Nombre secretario
                   </label>
                 </div>
                 <div class="col d-flex">
