--- a/asivamosffie.web/asivamosffie/src/assets/scss/_cards.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_cards.scss
@@ -21,7 +21,7 @@ mat-card.mat-card:not([class*="mat-elevation-z"]) {
 
 .header-card {
     &--text {
-        font-size: 1.5em;
+        font-size: 20px;
         background-color: #fff;
         padding-left: 0.5em;
         padding-right: 0.5em;
