--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/liberacion-saldo/liberacion-saldo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/liberacion-saldo/liberacion-saldo.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <p class="info-container">
+  <p class="info-container" *!ngIf="esVerDetalle">
     <span class="info-text sin-diligenciar">Sin diligenciar</span>
     <span class="info-text en-proceso">En proceso</span>
     <span class="info-text completo">Completo</span>
@@ -8,10 +8,10 @@
 <mat-accordion *ngFor="let drp of drps">
     <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="drp.estadoSemaforo">
+                <mat-panel-title class="expansion-style--title"[ngClass]="esVerDetalle === true ? '' : drp.estadoSemaforo">
                   {{ drp.numeroDrp }}
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-liberacion-saldo [tablaAportantes]="drp.aportantesGrid" [balanceFinanciero]="drp.balanceFinanciero" ></app-tabla-liberacion-saldo>
+            <app-tabla-liberacion-saldo [tablaAportantes]="drp.aportantesGrid" [balanceFinanciero]="drp.balanceFinanciero" [esVerDetalle]="esVerDetalle"></app-tabla-liberacion-saldo>
     </mat-expansion-panel>
 </mat-accordion>
