--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-liberacion-saldo/tabla-liberacion-saldo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-liberacion-saldo/tabla-liberacion-saldo.component.html
@@ -77,7 +77,10 @@
         >
           <div *ngFor="let el of element.data; let j = index" class="borber-table">
             <div class="sub-item-table--element">
-              <div class="col d-flex input-saldo" *ngIf="el.saldo > 0">
+              <div *ngIf="esVerDetalle === true">
+                {{ el.saldo  | currency: 'COP':'symbol-narrow':'.0-0'  }}
+              </div>
+              <div class="col d-flex input-saldo" *ngIf="el.saldo > 0 && !esVerDetalle">
                 <mat-form-field class="full-width">
                   <input
                     matInput
@@ -123,7 +126,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-  <div class="text-center">
+  <div class="text-center" *ngIf="!esVerDetalle">
     <button mat-button color="warn" class="btn-guardar" (click)="onSubmit()">
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
