--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -47,22 +47,22 @@
     </ng-container>
     <ng-template #mostrarTabla>
         <table mat-table [dataSource]="tablaAvanceFisico" matSort>
-  
+
             <ng-container matColumnDef="semanaNumero">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Semana número </th>
               <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.semanaNumero }}</b> </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="periodoReporte">
               <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 19%;"> Período del reporte </th>
               <td mat-cell *matCellDef="let element" align="center"> {{ element.periodoReporte }} </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="programacionSemana">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Programación de la semana </th>
               <td mat-cell *matCellDef="let element" align="center"> {{ element.programacionSemana }}% </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="capitulo">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Capítulo </th>
               <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
@@ -71,7 +71,7 @@
                 </div>
               </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="programacionCapitulo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Programación por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
@@ -88,14 +88,14 @@
                               [(ngModel)]="programacionCapitulo.programacionCapitulo"
                               required
                               style="width: 2em;"
-                              (ngModelChange)="seRealizoCambio = true">
+                              (ngModelChange)="changeProgramacionCapitulo(element)">
                   </mat-form-field>
                   <span style="margin: .5em;">%</span>
                   <span class="contador" *ngIf="programacionCapitulo.programacionCapitulo">{{3 - textoLimpio( programacionCapitulo.programacionCapitulo ) }}</span>
                   </div>
                 </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="avanceFisicoCapitulo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;"> Avance físico por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
@@ -120,12 +120,12 @@
                   </div>
                 </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="avanceFisicoSemana">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Avance físico de la semana </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.avanceFisicoSemana + '%' }} </td>
             </ng-container>
-        
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
@@ -144,12 +144,12 @@
 
       <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
         <table mat-table [dataSource]="tablaHistorial" matSort>
-      
+
             <ng-container matColumnDef="fechaRevision">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
               <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="responsable">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
                 <td mat-cell *matCellDef="let element" align="center" class="color-text">
@@ -158,23 +158,23 @@
                     </ng-container>
                     <ng-template #noEsSupervisor>
                         <p>Apoyo a la supervisión</p>
-                    </ng-template> 
+                    </ng-template>
                 </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="historial">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
               <td mat-cell *matCellDef="let element" align="center" class="color-text">
                   <section [innerHTML]="element.observacion"></section>
               </td>
             </ng-container>
-        
+
           <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
         </table>
       </section>
 </section>
-    
+
 <!-- Ver detalle -->
 <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="esVerDetalle === true">
   <ng-container *ngIf="sinRegistros === true; else mostrarTabla">
@@ -185,7 +185,7 @@
   </ng-container>
   <ng-template #mostrarTabla>
     <table mat-table [dataSource]="tablaAvanceFisico" matSort>
-  
+
       <ng-container matColumnDef="semanaNumero">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Semana número </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.semanaNumero }}</b> </td>
@@ -232,7 +232,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Avance físico de la semana </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana + '%' }} </td>
       </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
