--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/menu-generar-disponibilidad/menu-generar-disponibilidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/menu-generar-disponibilidad/menu-generar-disponibilidad.component.html
@@ -36,7 +36,9 @@
                   disponibilidad.nombreEstado=='Devuelta por coordinación financiera' ||
                   disponibilidad.nombreEstado=='Con disponibilidad presupuestal'||
                   disponibilidad.nombreEstado=='Con disponibilidad cancelada' ||
-                  disponibilidad.nombreEstado=='Rechazada por fiduciaria'">
+                  disponibilidad.nombreEstado=='Rechazada por fiduciaria' ||
+                  disponibilidad.nombreEstado=='Liberación de saldo'
+                ">
         <mat-panel-title class="expansion-style--title sin-diligenciar"
           [ngClass]="{
                       'sin-diligenciar': disponibilidad.completo=='Incompleto',
@@ -46,7 +48,8 @@
       </mat-expansion-panel-header>
       <app-tabla-con-validacion-presupuestal [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con validación presupuestal'"></app-tabla-con-validacion-presupuestal>
       <app-tabla-devuelta-por-coordinacion-financiera  [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Devuelta por coordinación financiera'"></app-tabla-devuelta-por-coordinacion-financiera>
-      <app-tabla-con-disponibilidad-presupuestal [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad presupuestal'" ></app-tabla-con-disponibilidad-presupuestal>
+      <app-tabla-con-disponibilidad-presupuestal [disponibilidadPresupuestal]="disponibilidad" [esLiberacion] = "disponibilidad.nombreEstado=='Liberación de saldo' ? true : false" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad presupuestal' || disponibilidad.nombreEstado=='Liberación de saldo'"
+      ></app-tabla-con-disponibilidad-presupuestal>
       <app-tabla-con-disponibilidad-cancelada  [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad cancelada'"></app-tabla-con-disponibilidad-cancelada>
       <app-tabla-rechazada-fiduciaria  [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Rechazada por fiduciaria'"></app-tabla-rechazada-fiduciaria>
     </mat-expansion-panel>
