--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/tabla-con-disponibilidad-presupuestal/tabla-con-disponibilidad-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/tabla-con-disponibilidad-presupuestal/tabla-con-disponibilidad-presupuestal.component.html
@@ -10,30 +10,30 @@
 
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="tabla text-center">
-    
+
         <ng-container matColumnDef="fecha">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
             <td mat-cell *matCellDef="let element"> <b>{{element.fecha}}</b> </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="numero">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="tipo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['detalleConDisponibilidadPresupuestal', element.id, element.esNovedad, element.novedadId]" 
-                mat-raised-button color="accent" class="btn-table">Ver detalle</a>
+                <button mat-raised-button color="accent" class="btn-table"
+                (click)="verDetalle(element.id, element.esNovedad, element.novedadId)">Ver detalle</button>
             </td>
         </ng-container>
-    
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
