--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validar/validar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validar/validar.component.html
@@ -44,7 +44,15 @@
       <app-tabla-en-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='En validación presupuestal'"></app-tabla-en-validacion>
       <app-tabla-devuelta-por-coordinacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Devuelta por coordinación financiera'"></app-tabla-devuelta-por-coordinacion>
       <app-tabla-devuelta-por-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Devuelta por validación presupuestal'"></app-tabla-devuelta-por-validacion>
-      <app-tabla-con-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con validación presupuestal' || disponibilidad.nombreEstado=='Con disponibilidad presupuestal'" [esGenerar] = "disponibilidad.nombreEstado=='Con disponibilidad presupuestal' ? true : false"></app-tabla-con-validacion>
+      <app-tabla-con-validacion [disponibilidadPresupuestal]="disponibilidad"
+                                *ngIf=" disponibilidad.nombreEstado=='Con validación presupuestal' ||
+                                        disponibilidad.nombreEstado=='Con disponibilidad presupuestal' ||
+                                        disponibilidad.nombreEstado=='Liberación de saldo'
+                                      "
+                                [esGenerar] = "disponibilidad.nombreEstado=='Con disponibilidad presupuestal' ? true : false"
+                                [esLiberacion] = "disponibilidad.nombreEstado=='Liberación de saldo' ? true : false"
+                                >
+      </app-tabla-con-validacion>
       <app-tabla-rechasada-por-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Rechazada por validación presupuestal'"></app-tabla-rechasada-por-validacion>
       <app-tabla-con-disponibilidad-cancelada [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad cancelada'"></app-tabla-con-disponibilidad-cancelada>
     </mat-expansion-panel>
