--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -470,7 +470,7 @@
               </div>
               <div class="col d-flex">
                 <mat-form-field>
-                  <input matInput type="text" maxlength="100" #correo formControlName="correo" required />
+                  <input matInput type="text" maxlength="100" #correo formControlName="correo" required (ngModelChange)="validateExistEmail($event)"/>
                 </mat-form-field>
                 <span
                   class="contador"
