--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-con-validacion/tabla-con-validacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-con-validacion/tabla-con-validacion.component.html
@@ -9,22 +9,22 @@
 </div>
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="text-center">
-    
+
         <ng-container matColumnDef="fecha">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
             <td mat-cell *matCellDef="let element"> <b>{{element.fecha }}</b> </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="numero">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="tipo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="estadoRegistro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de registro </th>
             <td mat-cell *matCellDef="let element">
@@ -33,15 +33,15 @@
                 {{element.estadoRegistro?"Completo":"Incompleto"}}
             </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table" 
-                (click)="verDetalle(element.id, element.esNovedad, element.novedadId)">Ver detalle</button>
+                <button mat-raised-button color="accent" class="btn-table"
+                (click)="verDetalle(element.id, element.esNovedad, element.novedadId, element.tieneHistorico)">Ver detalle</button>
             </td>
         </ng-container>
-    
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
